Hover e ajuste do display.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <body>
     <main>
       <div class="container">
-        <section class="display"><p id="result">0</p></section>
+        <section class="display">
+          <p id="result">0</p>
+        </section>
         <table>
           <tr>
             <td><button id="ac" class="btn btn_function">AC</button></td>
@@ -46,4 +48,5 @@
       </div>
     </main>
   </body>
+  <script href="script.js"></script>
 </html>
